--- a/Tracker/Base.lproj/Main.storyboard
+++ b/Tracker/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                 <subviews>
                                     <view alpha="0.79999999999999982" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b09-XM-ycc" userLabel="TrackerView" customClass="TRTrackerView" customModule="Tracker" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="583"/>
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="425" id="t6G-kz-c7Q"/>
                                         </constraints>
@@ -50,7 +50,7 @@
                                 </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="Hen-NF-7Nj" secondAttribute="bottom" id="LPS-AO-Yfb"/>
                             <constraint firstItem="Hen-NF-7Nj" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="Pc5-L8-zPO"/>
@@ -91,9 +91,6 @@
                                 <color key="barTintColor" red="0.074731691919191934" green="0.074731691919191934" blue="0.074731691919191934" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" enablesReturnKeyAutomatically="YES"/>
                             </searchBar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="runner" translatesAutoresizingMaskIntoConstraints="NO" id="8p2-UF-fks">
-                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
-                            </imageView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="yY0-5y-3hh">
                                 <rect key="frame" x="26" y="134" width="323" height="29"/>
                                 <segments>
@@ -105,7 +102,7 @@
                                     <action selector="segmentControlPressed:" destination="7Tx-Ke-KiD" eventType="valueChanged" id="ZuZ-O8-dII"/>
                                 </connections>
                             </segmentedControl>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FwJ-qE-Jh7" customClass="TREditTracksTableView" customModule="Tracker" customModuleProvider="target">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FwJ-qE-Jh7" customClass="TREditTracksTableView" customModule="Tracker" customModuleProvider="target">
                                 <rect key="frame" x="16" y="167" width="343" height="500"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -163,7 +160,7 @@
                                 <sections/>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                         <accessibility key="accessibilityConfiguration">
                             <accessibilityTraits key="traits" image="YES"/>
                         </accessibility>
@@ -172,16 +169,12 @@
                             <constraint firstItem="yY0-5y-3hh" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leadingMargin" constant="10" id="971-pV-TXU"/>
                             <constraint firstItem="QCP-yP-v5L" firstAttribute="top" secondItem="wxM-WD-TxK" secondAttribute="bottom" id="CXZ-bk-OtC"/>
                             <constraint firstItem="FwJ-qE-Jh7" firstAttribute="bottom" secondItem="2LJ-LW-NBh" secondAttribute="top" id="H7t-jg-47M"/>
-                            <constraint firstItem="8p2-UF-fks" firstAttribute="bottom" secondItem="2LJ-LW-NBh" secondAttribute="top" id="Hpy-ob-ai0"/>
                             <constraint firstItem="FwJ-qE-Jh7" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leadingMargin" id="Hzk-6x-ZmS"/>
-                            <constraint firstItem="8p2-UF-fks" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leading" id="JGL-fz-d1l"/>
                             <constraint firstItem="FwJ-qE-Jh7" firstAttribute="trailing" secondItem="uh5-dv-4Vr" secondAttribute="trailingMargin" id="K3B-aa-O7C"/>
                             <constraint firstItem="yY0-5y-3hh" firstAttribute="top" secondItem="QCP-yP-v5L" secondAttribute="bottom" constant="26" id="OUf-3E-2BC"/>
                             <constraint firstItem="QCP-yP-v5L" firstAttribute="trailing" secondItem="uh5-dv-4Vr" secondAttribute="trailing" id="T1n-EN-DJh"/>
-                            <constraint firstItem="8p2-UF-fks" firstAttribute="trailing" secondItem="uh5-dv-4Vr" secondAttribute="trailing" id="U4C-fN-dwj"/>
                             <constraint firstItem="FwJ-qE-Jh7" firstAttribute="top" secondItem="yY0-5y-3hh" secondAttribute="bottom" constant="5" id="XIb-hu-nMl"/>
                             <constraint firstItem="QCP-yP-v5L" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leading" id="ZoJ-ab-OME"/>
-                            <constraint firstItem="8p2-UF-fks" firstAttribute="top" secondItem="QCP-yP-v5L" secondAttribute="bottom" id="xRI-0m-Cqf"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
@@ -207,13 +200,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jLY-zk-90h" customClass="TPKeyboardAvoidingTableView">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="50" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="jLY-zk-90h" customClass="TPKeyboardAvoidingTableView">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" red="0.053582702019999998" green="0.053582702019999998" blue="0.053582702019999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="settings" id="eWP-oY-MpG" customClass="TRSettingsTableViewCell" customModule="Tracker" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="74" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eWP-oY-MpG" id="wLe-jD-6ai">
                                             <rect key="frame" x="0.0" y="0.0" width="342" height="50"/>
@@ -239,10 +232,10 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="jLY-zk-90h" firstAttribute="top" secondItem="5Wn-JH-nGM" secondAttribute="bottom" id="583-IB-y71"/>
                             <constraint firstItem="jLY-zk-90h" firstAttribute="bottom" secondItem="dCk-HZ-5fS" secondAttribute="top" id="HVg-kd-MeG"/>
+                            <constraint firstItem="jLY-zk-90h" firstAttribute="top" secondItem="5Wn-JH-nGM" secondAttribute="bottom" id="JWk-9c-ebo"/>
                             <constraint firstItem="jLY-zk-90h" firstAttribute="left" secondItem="O9h-Pa-pET" secondAttribute="left" id="det-mj-MBG"/>
                             <constraint firstItem="jLY-zk-90h" firstAttribute="right" secondItem="O9h-Pa-pET" secondAttribute="right" id="v6y-CT-B3c"/>
                         </constraints>
@@ -273,7 +266,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4Jj-LB-1SC" customClass="TPKeyboardAvoidingTableView">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" red="0.053582702019999998" green="0.053582702019999998" blue="0.053582702019999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="items" id="GuU-zA-tk5" customClass="TRManageItemsTableViewCell" customModule="Tracker" customModuleProvider="target">
@@ -315,7 +308,7 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="4Jj-LB-1SC" firstAttribute="top" secondItem="K59-xG-gh1" secondAttribute="bottom" id="1zP-Fa-og3"/>
                             <constraint firstItem="4Jj-LB-1SC" firstAttribute="bottom" secondItem="roZ-4S-zlg" secondAttribute="top" id="Bkm-Tx-xKP"/>
@@ -348,7 +341,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GFv-pJ-DdA" userLabel="itemTableView" customClass="TPKeyboardAvoidingTableView">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" red="0.053582702019999998" green="0.053582702019999998" blue="0.053582702019999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="userInputCell" rowHeight="90" id="hoa-fo-QKM" customClass="TREditItemTableViewInputCell" customModule="Tracker" customModuleProvider="target">
@@ -429,7 +422,7 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="GFv-pJ-DdA" firstAttribute="right" secondItem="BbF-XA-DKY" secondAttribute="right" id="NlM-y2-NxR"/>
                             <constraint firstItem="GFv-pJ-DdA" firstAttribute="top" secondItem="ioo-dF-KLk" secondAttribute="bottom" id="Zax-kx-PHo"/>
@@ -471,6 +464,5 @@
     <resources>
         <image name="full__0000s_0091_config" width="25" height="25"/>
         <image name="full__0000s_0106_note" width="23" height="23"/>
-        <image name="runner" width="700" height="700"/>
     </resources>
 </document>
